# custom-networking-example

./: CMakeLists.txt  plotter.py
include/: Consumer.hpp  Message.hpp  Nvm.hpp  Processor.hpp  Provider.hpp  SleeperWithPeriod.hpp
src/: CMakeLists.txt  Processor.cpp  main.cpp
